# roCORD

./: .gitignore  .lgtm.yml  .travis.yml  CMakeLists.txt  CMakeLists_travis.txt  README.md  config.json  discord_bot.cpp  discord_bot.h  discord_bot.hpp  discord_core.cpp  discord_core.hpp  discord_error.hpp  discord_guild.cpp  discord_guild.h  discord_http.cpp  discord_http.hpp  discord_websocket.cpp  discord_websocket.h  discord_websocket.hpp  discordbot.cpp  discordbot.h  https.cpp  https.h  install.sh  main.cpp  showmsg_testing.hpp
.github/ISSUE_TEMPLATE/: bug_report.md
config/: config.json
diff/: Versions.md
diff/rev1/: channel.diff  map.diff  script.diff
diff/rev2/: CmakeLists.txt.diff  channel.diff  mob.diff  script.diff
diff/user_patches/: 7f772c3.patch  9000948c3.diff
diffs/: channel.diff
docs/: README.md  bot_commands.md  configuration.md  dependencies.md  discord.md  faq.md  installation.md  installation_centos.md  installation_centos_manual.md  installation_debian.md  installation_debian_manual.md  installation_ubuntu_manual.md  script_commands.md  versioning.md
src/: clif_testing.cpp  discord_bot.cpp  discord_bot.hpp  discord_core.cpp  discord_core.hpp  discord_http.cpp  discord_http.hpp  discord_log.cpp  discord_log.hpp  discord_log_entry.cpp  discord_log_entry.hpp  discord_websocket.cpp  discord_websocket.hpp  main.cpp  showmsg_testing.cpp
test/: bot_test.cpp  core_mock.hpp  core_test.cpp  core_test.hpp  fake_api.cpp  fake_http.hpp  fake_websocket.hpp  filter_test.cpp
test/integration/: core_integration.cpp
